tests/snapshots/construction_combine__construction_combine_invalid_signature_format.snap
---
source: tests/construction_combine.rs
expression: response
---
Err(
    SignatureInvalid(
        "Hex decoding failed: Invalid character 'Z' at position 0",
    ),
)
