tests/snapshots/construction_combine__construction_combine_invalid_signature_type.snap
---
source: tests/construction_combine.rs
expression: response
---
Err(
    SignatureInvalid(
        "Expected SchnorrPoseidon, found Ecdsa",
    ),
)
