tests/snapshots/construction_combine__construction_combine_no_signatures.snap
---
source: tests/construction_combine.rs
expression: response
---
Err(
    SignatureInvalid(
        "Expected 1 signature, found 0",
    ),
)
